FIX: header-bar-wrapper.no-sticky .container>.row - remove align-items: center!important; property

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ Theme Name: tourtiger
 Theme URI: http://tourtiger.wpengine.com
 Description: child theme of genesis from git
 Author: tourtiger
-Version: 1.13.37
+Version: 1.13.38
 Template: genesis
 Text Domain: tt1
 Template Version: 2.0.27
@@ -672,7 +672,7 @@ html body .sidebar_links_options_wrap a {
 
 .header-bar-wrapper.no-sticky .container>.row {
     display: flex!important;
-    align-items: center!important
+    /*align-items: center!important*/
 }
 
 .js-navigated-gallery__front .slick-arrow {
